--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
 <body>
 
-<img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
+<img src="https://www.cydiamate.com/images/cydiadownload1.png" id="octocat" alt="octocat-gif" />
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
-<p>Welcome to your first GitHub Pages website!</p>
+<p>CydiaMate is the best website which contains jailbreak updates, news and show correct guidance for cydia download to iPhone iPod or iPad. Cydia is the biggest 3rd party App store including with tons of apps, themes, tweaks etc.</p>
 
 </body>
 </html>
